refactor(core/grid): remove fixed feature

--- a/packages/html-test-app/src/preview-examples/grid-padding.html
+++ b/packages/html-test-app/src/preview-examples/grid-padding.html
@@ -9,7 +9,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div class="example-parent">
-      <h4>None fluid (default)</h4>
+      <h4>Grid with padding</h4>
       <ix-grid>
         <ix-row>
           <ix-col>1</ix-col>
@@ -27,8 +27,8 @@ SPDX-License-Identifier: MIT
         </ix-row>
       </ix-grid>
 
-      <h4>fluid</h4>
-      <ix-grid fluid>
+      <h4>Grid without padding</h4>
+      <ix-grid no-padding>
         <ix-row>
           <ix-col>1</ix-col>
           <ix-col>2</ix-col>
