--- a/packages/angular-test-app/src/preview-examples/grid-padding.html
+++ b/packages/angular-test-app/src/preview-examples/grid-padding.html
@@ -7,7 +7,7 @@ This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
 <div class="example-parent">
-  <h4>Non fluid (default)</h4>
+  <h4>Grid with padding</h4>
   <ix-grid>
     <ix-row>
       <ix-col>1</ix-col>
@@ -25,8 +25,8 @@ LICENSE file in the root directory of this source tree.
     </ix-row>
   </ix-grid>
 
-  <h4>fluid</h4>
-  <ix-grid fluid>
+  <h4>Grid without padding</h4>
+  <ix-grid no-padding>
     <ix-row>
       <ix-col>1</ix-col>
       <ix-col>2</ix-col>
