feat(core/blind): add sublabel property

--- a/packages/html-test-app/src/preview-examples/blind-header-actions.html
+++ b/packages/html-test-app/src/preview-examples/blind-header-actions.html
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-blind label="Example" icon="info">
+    <ix-blind label="Example" icon="info" sublabel="Sublabel">
       <ix-icon-button
         id="context-menu"
         slot="header-actions"
