refactor(core/layout-grid): rename to layout grid

--- a/packages/angular-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/angular-test-app/src/preview-examples/theme-switcher.html
@@ -1,4 +1,4 @@
-<ix-grid>
+<ix-layout-grid>
   <ix-row>
     <ix-col size="2">
       <span>Light/Dark</span>
@@ -32,4 +32,4 @@
       <label for="system"></label>
     </ix-col>
   </ix-row>
-</ix-grid>
+</ix-layout-grid>
