--- a/packages/html-test-app/src/preview-examples/grid-padding.html
+++ b/packages/html-test-app/src/preview-examples/grid-padding.html
@@ -10,7 +10,7 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <div class="example-parent">
       <h4>Grid with padding</h4>
-      <ix-grid>
+      <ix-layout-grid>
         <ix-row>
           <ix-col>1</ix-col>
           <ix-col>2</ix-col>
@@ -25,10 +25,10 @@ SPDX-License-Identifier: MIT
           <ix-col>11</ix-col>
           <ix-col>12</ix-col>
         </ix-row>
-      </ix-grid>
+      </ix-layout-grid>
 
       <h4>Grid without padding</h4>
-      <ix-grid no-padding>
+      <ix-layout-grid no-padding>
         <ix-row>
           <ix-col>1</ix-col>
           <ix-col>2</ix-col>
@@ -43,7 +43,7 @@ SPDX-License-Identifier: MIT
           <ix-col>11</ix-col>
           <ix-col>12</ix-col>
         </ix-row>
-      </ix-grid>
+      </ix-layout-grid>
     </div>
     <style>
       .example-parent {
@@ -54,7 +54,7 @@ SPDX-License-Identifier: MIT
     </style>
     <!-- Preview code -->
     <style>
-      ix-grid {
+      ix-layout-grid {
         margin-bottom: 1rem;
       }
 
