--- a/packages/html-test-app/src/preview-examples/grid-size.html
+++ b/packages/html-test-app/src/preview-examples/grid-size.html
@@ -9,7 +9,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <h4>Column 6 takes all space until reached column 12</h4>
-    <ix-grid>
+    <ix-layout-grid>
       <ix-row>
         <ix-col>1</ix-col>
         <ix-col>2</ix-col>
@@ -18,20 +18,20 @@ SPDX-License-Identifier: MIT
         <ix-col>5</ix-col>
         <ix-col size="6">6</ix-col>
       </ix-row>
-    </ix-grid>
+    </ix-layout-grid>
 
     <h4>Stack on smaller screens as md</h4>
-    <ix-grid>
+    <ix-layout-grid>
       <ix-row>
         <ix-col size="12" size-md="3">1</ix-col>
         <ix-col size="12" size-md="3">2</ix-col>
         <ix-col size="12" size-md="3">3</ix-col>
         <ix-col size="12" size-md="3">4</ix-col>
       </ix-row>
-    </ix-grid>
+    </ix-layout-grid>
     <!-- Preview code -->
     <style>
-      ix-grid {
+      ix-layout-grid {
         margin-bottom: 1rem;
       }
 
