--- a/packages/html-test-app/src/preview-examples/grid.html
+++ b/packages/html-test-app/src/preview-examples/grid.html
@@ -8,7 +8,7 @@ SPDX-License-Identifier: MIT
 <html>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-grid>
+    <ix-layout-grid>
       <ix-row>
         <ix-col>1</ix-col>
         <ix-col>2</ix-col>
@@ -17,9 +17,9 @@ SPDX-License-Identifier: MIT
         <ix-col>5</ix-col>
         <ix-col>6</ix-col>
       </ix-row>
-    </ix-grid>
+    </ix-layout-grid>
 
-    <ix-grid>
+    <ix-layout-grid>
       <ix-row>
         <ix-col>1</ix-col>
         <ix-col>2</ix-col>
@@ -34,10 +34,10 @@ SPDX-License-Identifier: MIT
         <ix-col>11</ix-col>
         <ix-col>12</ix-col>
       </ix-row>
-    </ix-grid>
+    </ix-layout-grid>
     <!-- Preview code -->
     <style>
-      ix-grid {
+      ix-layout-grid {
         margin-bottom: 1rem;
       }
 
