docs(select): remove deprecated props/events

--- a/packages/angular-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/angular-test-app/src/preview-examples/theme-switcher.html
@@ -12,7 +12,7 @@
     <ix-col size="2">Theme</ix-col>
     <ix-col>
       <ix-select
-        [selectedIndices]="selectedTheme"
+        [value]="selectedTheme"
         (itemSelectionChange)="onItemSelectionChange($event)"
         placeholder="Select a theme"
       >
