--- a/packages/core/src/tests/select/autoplacement/index.html
+++ b/packages/core/src/tests/select/autoplacement/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body style="padding: 2rem">
     <div style="position: absolute; bottom: 0px">
-      <ix-select selected-indices="2">
+      <ix-select value="2">
         <ix-select-item label="Item 1" value="1"></ix-select-item>
         <ix-select-item label="Item 2" value="2"></ix-select-item>
         <ix-select-item label="Item 3" value="3"></ix-select-item>
