--- a/packages/html-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/html-test-app/src/preview-examples/theme-switcher.html
@@ -70,7 +70,7 @@ SPDX-License-Identifier: MIT
           themeSelect.appendChild(item);
         });
 
-        themeSelect.selectedIndices = selectedTheme;
+        themeSelect.value = selectedTheme;
 
         themeSelect.addEventListener(
           'itemSelectionChange',
