--- a/packages/core/src/tests/select/allow-clear/index.html
+++ b/packages/core/src/tests/select/allow-clear/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-select allow-clear selected-indices="1">
+    <ix-select allow-clear value="1">
       <ix-select-item label="Item 1" value="1"></ix-select-item>
       <ix-select-item label="Item 2" value="2"></ix-select-item>
       <ix-select-item label="Item 3" value="3"></ix-select-item>
