--- a/packages/core/src/tests/select/editable/index.html
+++ b/packages/core/src/tests/select/editable/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body style="padding: 2rem">
-    <ix-select editable selected-indices="2">
+    <ix-select editable value="2">
       <ix-select-item label="Item 1" value="1"></ix-select-item>
       <ix-select-item label="Item 2" value="2"></ix-select-item>
       <ix-select-item label="Item 3" value="3"></ix-select-item>
