--- a/packages/core/src/tests/select/list-header-hide/index.html
+++ b/packages/core/src/tests/select/list-header-hide/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body style="padding: 2rem">
-    <ix-select hide-list-header selected-indices="1">
+    <ix-select hide-list-header value="1">
       <ix-select-item label="Item 1" value="1"></ix-select-item>
       <ix-select-item label="Item 2" value="2"></ix-select-item>
       <ix-select-item label="Item 3" value="3"></ix-select-item>
