--- a/packages/core/src/tests/select/mode-multiple-overflow/index.html
+++ b/packages/core/src/tests/select/mode-multiple-overflow/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body padding="2rem" style="width: 256px">
-    <ix-select selected-indices="2" mode="multiple">
+    <ix-select value="2" mode="multiple">
       <ix-select-item label="Item 1" value="1"></ix-select-item>
       <ix-select-item label="Item 2" value="2"></ix-select-item>
       <ix-select-item label="Item 3" value="3"></ix-select-item>
@@ -32,7 +32,7 @@ SPDX-License-Identifier: MIT
         await window.customElements.whenDefined('ix-select-item');
 
         const select = document.querySelector('ix-select');
-        select.selectedIndices = ['1', '2', '3', '4', '5', '6'];
+        select.value = ['1', '2', '3', '4', '5', '6'];
       })();
     </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
