--- a/packages/html-test-app/src/preview-examples/select.html
+++ b/packages/html-test-app/src/preview-examples/select.html
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-select selected-indices="1">
+    <ix-select value="1">
       <ix-select-item label="Item 1" value="1"></ix-select-item>
       <ix-select-item label="Item 2" value="2"></ix-select-item>
       <ix-select-item label="Item 3" value="3"></ix-select-item>
