fix: styles, tests, docs

--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -32,6 +32,7 @@ SPDX-License-Identifier: MIT
   <body style="margin: 0px; height: 100vh">
     <my-component />
     <ix-date-picker from="2023/09/05" to="2023/09/10"></ix-date-picker>
+    <ix-datetime-picker></ix-datetime-picker>
     <script>
       const datePicker = document.querySelector('ix-date-picker');
       datePicker.addEventListener('dateChange', event => {
