--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -20,6 +20,10 @@ SPDX-License-Identifier: MIT
     <link rel="stylesheet" href="/build/siemens-ix.css" />
     <link
       rel="stylesheet"
+      href="/build/dist-css/theme/legacy-classic-dark.css"
+    />
+    <link
+      rel="stylesheet"
       href="/build/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
     />
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
