--- a/packages/core/src/tests/split-button/basic/index.html
+++ b/packages/core/src/tests/split-button/basic/index.html
@@ -15,9 +15,9 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-split-button label="Test">
-      <ix-split-button-item label="Item 1" icon="print" />
-      <ix-split-button-item label="Item 2" icon="print" />
-      <ix-split-button-item label="Item 3" icon="print" />
+      <ix-dropdown-item label="Item 1" icon="print"></ix-dropdown-item>
+      <ix-dropdown-item label="Item 2" icon="print"></ix-dropdown-item>
+      <ix-dropdown-item label="Item 3" icon="print"></ix-dropdown-item>
     </ix-split-button>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
