--- a/packages/html-test-app/src/preview-examples/split-button-icons.html
+++ b/packages/html-test-app/src/preview-examples/split-button-icons.html
@@ -12,8 +12,8 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-split-button icon="document" split-icon="chevron-down-small">
-      <ix-split-button-item icon="cut"></ix-split-button-item>
-      <ix-split-button-item icon="bulb"></ix-split-button-item>
+      <ix-dropdown-item icon="cut"></ix-dropdown-item>
+      <ix-dropdown-item icon="bulb"></ix-dropdown-item>
     </ix-split-button>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
