--- a/packages/html-test-app/src/preview-examples/split-button.html
+++ b/packages/html-test-app/src/preview-examples/split-button.html
@@ -12,8 +12,8 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-split-button label="Action text" split-icon="chevron-down-small">
-      <ix-split-button-item label="Item 1"></ix-split-button-item>
-      <ix-split-button-item label="Item 2"></ix-split-button-item>
+      <ix-dropdown-item label="Item 1"></ix-dropdown-item>
+      <ix-dropdown-item label="Item 2"></ix-dropdown-item>
     </ix-split-button>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
