--- a/packages/html-test-app/src/preview-examples/modal.html
+++ b/packages/html-test-app/src/preview-examples/modal.html
@@ -16,8 +16,8 @@ SPDX-License-Identifier: MIT
       <ix-modal-header>Message headline</ix-modal-header>
       <ix-modal-content>Message text lorem ipsum</ix-modal-content>
       <ix-modal-footer>
-        <ix-button outline>Cancel</ix-button>
-        <ix-button>OK</ix-button>
+        <ix-button outline data-cancel>Cancel</ix-button>
+        <ix-button data-okay>OK</ix-button>
       </ix-modal-footer>
     </template>
     <script type="module">
@@ -48,6 +48,17 @@ SPDX-License-Identifier: MIT
                 'modal-example-template'
               );
               const template = modalTemplate.content.cloneNode(true);
+
+              const cancelButton = template.querySelector('[data-cancel]');
+              const okayButton = template.querySelector('[data-okay]');
+
+              cancelButton.addEventListener('click', () => {
+                dismissModal(this);
+              });
+              okayButton.addEventListener('click', () => {
+                closeModal(this);
+              });
+
               this.append(template);
             }
           }
