feat(timepicker): refactor component

--- a/packages/core/src/tests/time-picker/basic/index.html
+++ b/packages/core/src/tests/time-picker/basic/index.html
@@ -32,8 +32,8 @@ SPDX-License-Identifier: MIT
       <ix-time-picker time="10:11:12" show-minutes></ix-time-picker>
       <ix-time-picker time="10:11:12" show-seconds></ix-time-picker>
       <ix-time-picker
-        time="10:11:12"
-        show-time-reference="true"
+        time="10:11:12 AM"
+        format="hh:mm:ss A"
       ></ix-time-picker>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
