--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -31,5 +31,8 @@ SPDX-License-Identifier: MIT
 
   <body style="margin: 0px; height: 100vh">
     <my-component />
+    <ix-time-picker
+      format="hh:mm:ss A"
+    ></ix-time-picker>
   </body>
 </html>
