feat(core/blind): add variant property

--- a/packages/html-test-app/src/preview-examples/blind-variants.html
+++ b/packages/html-test-app/src/preview-examples/blind-variants.html
@@ -4,21 +4,18 @@ SPDX-FileCopyrightText: 2023 Siemens AG
 SPDX-License-Identifier: MIT
 -->
 
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
-    />
-    <title>Stencil Component Starter</title>
+    <title>Blind example</title>
     <style>
       ix-blind {
-        margin: 0.5rem;
+        margin: 0.5rem 0;
       }
     </style>
   </head>
-  <body>
+  <body class="theme-brand-dark">
+    <!-- Preview code -->
     <ix-blind icon="bulb" label="Insight" sublabel="sublabel">
       <div>Insight content</div>
     </ix-blind>
@@ -28,7 +25,12 @@ SPDX-License-Identifier: MIT
     <ix-blind icon="bulb" variant="Alarm" label="Alarm" sublabel="sublabel">
       <div>Alarm content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Critical" label="Critical" sublabel="sublabel">
+    <ix-blind
+      icon="bulb"
+      variant="Critical"
+      label="Critical"
+      sublabel="sublabel"
+    >
       <div>Critical content</div>
     </ix-blind>
     <ix-blind icon="bulb" variant="Warning" label="Warning" sublabel="sublabel">
@@ -43,9 +45,7 @@ SPDX-License-Identifier: MIT
     <ix-blind icon="bulb" variant="Neutral" label="Neutral" sublabel="sublabel">
       <div>Neutral content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Primary" label="Primary" sublabel="sublabel">
-      <div>Primary content</div>
-    </ix-blind>
-    <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
+    <!-- Preview code -->
+    <script type="module" src="./init.js"></script>
   </body>
 </html>
