--- a/packages/html-test-app/src/preview-examples/blind-header-actions.html
+++ b/packages/html-test-app/src/preview-examples/blind-header-actions.html
@@ -11,12 +11,13 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-blind label="Example" icon="info" sublabel="Sublabel">
+    <ix-blind label="Example" icon="info">
       <ix-icon-button
         id="context-menu"
         slot="header-actions"
         ghost
         icon="context-menu"
+        color="color-primary"
       ></ix-icon-button>
       Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
       eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
