fix: lower case variant values

--- a/packages/core/src/tests/blind/basic/index.html
+++ b/packages/core/src/tests/blind/basic/index.html
@@ -19,31 +19,36 @@ SPDX-License-Identifier: MIT
     </style>
   </head>
   <body>
-    <ix-blind icon="bulb" label="Insight" sublabel="sublabel">
+    <ix-blind icon="bulb" label="insight" sublabel="sublabel">
       <div>Insight content</div>
     </ix-blind>
-    <ix-blind variant="outline" icon="bulb" label="Outline" sublabel="sublabel">
+    <ix-blind variant="outline" icon="bulb" label="outline" sublabel="sublabel">
       <div>Outline content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Alarm" label="Alarm" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="Alarm" label="alarm" sublabel="sublabel">
       <div>Alarm content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Critical" label="Critical" sublabel="sublabel">
+    <ix-blind
+      icon="bulb"
+      variant="Critical"
+      label="critical"
+      sublabel="sublabel"
+    >
       <div>Critical content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Warning" label="Warning" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="Warning" label="warning" sublabel="sublabel">
       <div>Warning content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Info" label="Info" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="Info" label="info" sublabel="sublabel">
       <div>Info content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Success" label="Success" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="Success" label="success" sublabel="sublabel">
       <div>Success content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Neutral" label="Neutral" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="Neutral" label="neutral" sublabel="sublabel">
       <div>Neutral content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Primary" label="Primary" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="Primary" label="primary" sublabel="sublabel">
       <div>Primary content</div>
     </ix-blind>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
