--- a/packages/core/src/tests/blind/basic/index.html
+++ b/packages/core/src/tests/blind/basic/index.html
@@ -25,30 +25,30 @@ SPDX-License-Identifier: MIT
     <ix-blind variant="outline" icon="bulb" label="outline" sublabel="sublabel">
       <div>Outline content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Alarm" label="alarm" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="alarm" label="alarm" sublabel="sublabel">
       <div>Alarm content</div>
     </ix-blind>
     <ix-blind
       icon="bulb"
-      variant="Critical"
+      variant="critical"
       label="critical"
       sublabel="sublabel"
     >
       <div>Critical content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Warning" label="warning" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="warning" label="warning" sublabel="sublabel">
       <div>Warning content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Info" label="info" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="info" label="info" sublabel="sublabel">
       <div>Info content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Success" label="success" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="success" label="success" sublabel="sublabel">
       <div>Success content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Neutral" label="neutral" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="neutral" label="neutral" sublabel="sublabel">
       <div>Neutral content</div>
     </ix-blind>
-    <ix-blind icon="bulb" variant="Primary" label="primary" sublabel="sublabel">
+    <ix-blind icon="bulb" variant="primary" label="primary" sublabel="sublabel">
       <div>Primary content</div>
     </ix-blind>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
