--- a/packages/core/src/tests/blind/basic/index.html
+++ b/packages/core/src/tests/blind/basic/index.html
@@ -12,10 +12,44 @@ SPDX-License-Identifier: MIT
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
     <title>Stencil Component Starter</title>
+    <style>
+      ix-blind {
+        margin: 0.5rem;
+      }
+    </style>
   </head>
   <body>
-    <ix-blind label="Some label">
-      <div>Content!</div>
+    <ix-blind icon="bulb" label="insight" sublabel="sublabel">
+      <div>Insight content</div>
+    </ix-blind>
+    <ix-blind variant="outline" icon="bulb" label="outline" sublabel="sublabel">
+      <div>Outline content</div>
+    </ix-blind>
+    <ix-blind icon="bulb" variant="alarm" label="alarm" sublabel="sublabel">
+      <div>Alarm content</div>
+    </ix-blind>
+    <ix-blind
+      icon="bulb"
+      variant="critical"
+      label="critical"
+      sublabel="sublabel"
+    >
+      <div>Critical content</div>
+    </ix-blind>
+    <ix-blind icon="bulb" variant="warning" label="warning" sublabel="sublabel">
+      <div>Warning content</div>
+    </ix-blind>
+    <ix-blind icon="bulb" variant="info" label="info" sublabel="sublabel">
+      <div>Info content</div>
+    </ix-blind>
+    <ix-blind icon="bulb" variant="success" label="success" sublabel="sublabel">
+      <div>Success content</div>
+    </ix-blind>
+    <ix-blind icon="bulb" variant="neutral" label="neutral" sublabel="sublabel">
+      <div>Neutral content</div>
+    </ix-blind>
+    <ix-blind icon="bulb" variant="primary" label="primary" sublabel="sublabel">
+      <div>Primary content</div>
     </ix-blind>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
