--- a/packages/html-test-app/src/preview-examples/dropdown-submenu.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-submenu.html
@@ -13,9 +13,7 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <ix-button id="iconTriggerId">Open</ix-button>
     <ix-dropdown trigger="iconTriggerId">
-      <ix-dropdown-item id="submenuTrigger" label="Submenu">
-        <ix-icon name="chevron-right-small" size="24"></ix-icon>
-      </ix-dropdown-item>
+      <ix-dropdown-item id="submenuTrigger" label="Submenu"></ix-dropdown-item>
       <ix-dropdown-item icon="star" label="Item 1"></ix-dropdown-item>
       <ix-dropdown-item icon="document" label="Item 2"></ix-dropdown-item>
       <ix-dropdown-item icon="bulb" label="Item 3"></ix-dropdown-item>
