--- a/packages/html-test-app/src/preview-examples/grid-size.html
+++ b/packages/html-test-app/src/preview-examples/grid-size.html
@@ -11,22 +11,32 @@ SPDX-License-Identifier: MIT
     <h4>Column 6 takes all space until reached column 12</h4>
     <ix-layout-grid>
       <ix-row>
-        <ix-col>1</ix-col>
-        <ix-col>2</ix-col>
-        <ix-col>3</ix-col>
-        <ix-col>4</ix-col>
-        <ix-col>5</ix-col>
-        <ix-col size="6">6</ix-col>
+        <ix-col><ix-typography format="display">1</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">2</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">3</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">4</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">5</ix-typography></ix-col>
+        <ix-col size="6"
+          ><ix-typography format="display">6</ix-typography></ix-col
+        >
       </ix-row>
     </ix-layout-grid>
 
     <h4>Stack on smaller screens as md</h4>
     <ix-layout-grid>
       <ix-row>
-        <ix-col size="12" size-md="3">1</ix-col>
-        <ix-col size="12" size-md="3">2</ix-col>
-        <ix-col size="12" size-md="3">3</ix-col>
-        <ix-col size="12" size-md="3">4</ix-col>
+        <ix-col size="12" size-md="3"
+          ><ix-typography format="display">1</ix-typography></ix-col
+        >
+        <ix-col size="12" size-md="3"
+          ><ix-typography format="display">2</ix-typography></ix-col
+        >
+        <ix-col size="12" size-md="3"
+          ><ix-typography format="display">3</ix-typography></ix-col
+        >
+        <ix-col size="12" size-md="3"
+          ><ix-typography format="display">4</ix-typography></ix-col
+        >
       </ix-row>
     </ix-layout-grid>
     <!-- Preview code -->
@@ -35,11 +45,17 @@ SPDX-License-Identifier: MIT
         margin-bottom: 1rem;
       }
 
-      ix-col {
-        background-color: var(--theme-color-primary);
-        border: var(--theme-std-bdr-2);
-        text-align: center;
-        color: var(--theme-color-inv-contrast-text);
+      ix-col > ix-typography {
+        display: flex;
+        padding: 0.15rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex: 1 0 0;
+        align-self: stretch;
+        border: 1px solid var(--theme-color-soft-bdr);
+        background: var(--theme-color-ghost);
+        border-radius: 3px;
       }
     </style>
     <script type="module" src="./init.js"></script>
