--- a/packages/html-test-app/src/preview-examples/grid.html
+++ b/packages/html-test-app/src/preview-examples/grid.html
@@ -10,29 +10,29 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <ix-layout-grid>
       <ix-row>
-        <ix-col>1</ix-col>
-        <ix-col>2</ix-col>
-        <ix-col>3</ix-col>
-        <ix-col>4</ix-col>
-        <ix-col>5</ix-col>
-        <ix-col>6</ix-col>
+        <ix-col><ix-typography format="display">1</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">2</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">3</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">4</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">5</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">6</ix-typography></ix-col>
       </ix-row>
     </ix-layout-grid>
 
     <ix-layout-grid>
       <ix-row>
-        <ix-col>1</ix-col>
-        <ix-col>2</ix-col>
-        <ix-col>3</ix-col>
-        <ix-col>4</ix-col>
-        <ix-col>5</ix-col>
-        <ix-col>6</ix-col>
-        <ix-col>7</ix-col>
-        <ix-col>8</ix-col>
-        <ix-col>9</ix-col>
-        <ix-col>10</ix-col>
-        <ix-col>11</ix-col>
-        <ix-col>12</ix-col>
+        <ix-col><ix-typography format="display">1</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">2</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">3</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">4</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">5</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">6</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">7</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">8</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">9</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">10</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">11</ix-typography></ix-col>
+        <ix-col><ix-typography format="display">12</ix-typography></ix-col>
       </ix-row>
     </ix-layout-grid>
     <!-- Preview code -->
@@ -41,11 +41,17 @@ SPDX-License-Identifier: MIT
         margin-bottom: 1rem;
       }
 
-      ix-col {
-        background-color: var(--theme-color-primary);
-        border: var(--theme-std-bdr-2);
-        text-align: center;
-        color: var(--theme-color-inv-contrast-text);
+      ix-col > ix-typography {
+        display: flex;
+        padding: 0.15rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex: 1 0 0;
+        align-self: stretch;
+        border: 1px solid var(--theme-color-soft-bdr);
+        background: var(--theme-color-ghost);
+        border-radius: 3px;
       }
     </style>
     <script type="module" src="./init.js"></script>
