--- a/packages/core/src/tests/input/basic/index.html
+++ b/packages/core/src/tests/input/basic/index.html
@@ -12,10 +12,16 @@ SPDX-License-Identifier: MIT
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
     <title>Stencil Component Starter</title>
+    <style>
+      body {
+        padding: 1rem;
+      }
+    </style>
   </head>
   <body>
-    <div class="m-2">
+    <div>
       <input class="form-control" placeholder="Enter text here" type="text" />
+      <input placeholder="Enter text here" type="text" />
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
