--- a/packages/core/src/tests/textarea/readonly/index.html
+++ b/packages/core/src/tests/textarea/readonly/index.html
@@ -5,18 +5,27 @@ SPDX-License-Identifier: MIT
 -->
 
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
+    <title>Stencil Component Starter</title>
+    <style>
+      body {
+        padding: 1rem;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-  <title>Stencil Component Starter</title>
-</head>
-
-<body>
-  <div class="m-2">
-    <textarea class="form-control" placeholder="Enter text here" readonly></textarea>
-  </div>
-  <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
-</body>
-
+  <body>
+    <textarea
+      class="form-control"
+      placeholder="Enter text here"
+      readonly
+    ></textarea>
+    <textarea placeholder="Enter text here" readonly></textarea>
+    <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
+  </body>
 </html>
