docs: update to latest style css

--- a/packages/html-test-app/src/preview-examples/textarea-readonly.html
+++ b/packages/html-test-app/src/preview-examples/textarea-readonly.html
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <textarea class="form-control" placeholder="Enter text here" readonly>
+    <textarea placeholder="Enter text here" readonly>
       Some example text
     </textarea>
     <!-- Preview code -->
