--- a/packages/html-test-app/src/preview-examples/textarea.html
+++ b/packages/html-test-app/src/preview-examples/textarea.html
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <textarea class="form-control" placeholder="Enter text here"></textarea>
+    <textarea placeholder="Enter text here"></textarea>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
   </body>
