--- a/packages/html-test-app/src/preview-examples/validation.html
+++ b/packages/html-test-app/src/preview-examples/validation.html
@@ -24,13 +24,7 @@ SPDX-License-Identifier: MIT
           <label for="validationCustom01" class="form-label">
             First name
           </label>
-          <input
-            type="text"
-            class="form-control"
-            id="validationCustom01"
-            value=""
-            required
-          />
+          <input type="text" id="validationCustom01" value="" required />
           <div class="valid-feedback">Looks good!</div>
         </div>
       </div>
@@ -40,13 +34,7 @@ SPDX-License-Identifier: MIT
             <label for="validationCustom02" class="form-label">
               Last name
             </label>
-            <input
-              type="text"
-              class="form-control"
-              id="validationCustom02"
-              value=""
-              required
-            />
+            <input type="text" id="validationCustom02" value="" required />
           </ix-validation-tooltip>
         </div>
       </div>
@@ -57,7 +45,6 @@ SPDX-License-Identifier: MIT
           </label>
           <input
             type="text"
-            class="form-control"
             id="validationCustomUsername"
             aria-describedby="inputGroupPrepend"
             required
