--- a/packages/html-test-app/src/preview-examples/input-types.html
+++ b/packages/html-test-app/src/preview-examples/input-types.html
@@ -6,45 +6,41 @@ SPDX-License-Identifier: MIT
 
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Input Search example</title>
+  </head>
 
-<head>
-  <title>Input Search example</title>
-</head>
+  <body class="theme-brand-dark">
+    <!-- Preview code -->
+    <form class="needs-validation m-2">
+      <ix-input-group style="margin-bottom: 0.5rem">
+        <span slot="input-start">Text:</span>
+        <input placeholder="Enter text" type="text" />
+      </ix-input-group>
 
+      <ix-input-group style="margin-bottom: 0.5rem">
+        <span slot="input-start">Number:</span>
+        <input type="number" />
+        <span slot="input-end">.00</span>
+        <span slot="input-end">$</span>
+      </ix-input-group>
 
+      <ix-input-group style="margin-bottom: 0.5rem">
+        <span slot="input-start">Password:</span>
+        <input placeholder="Enter password" type="password" />
+      </ix-input-group>
 
-<body class="theme-brand-dark">
-  <!-- Preview code -->
-  <form class="needs-validation m-2">
-    <ix-input-group style="margin-bottom: 0.5rem;">
-      <span slot="input-start">Text:</span>
-      <input placeholder="Enter text" type="text" class="form-control" />
-    </ix-input-group>
+      <ix-input-group style="margin-bottom: 0.5rem">
+        <span slot="input-start">Email:</span>
+        <input placeholder="example@domain.com" type="email" />
+      </ix-input-group>
 
-    <ix-input-group style="margin-bottom: 0.5rem;">
-      <span slot="input-start">Number:</span>
-      <input type="number" class="form-control" />
-      <span slot="input-end">.00</span>
-      <span slot="input-end">$</span>
-    </ix-input-group>
-
-    <ix-input-group style="margin-bottom: 0.5rem;">
-      <span slot="input-start">Password:</span>
-      <input placeholder="Enter password" type="password" class="form-control" />
-    </ix-input-group>
-
-    <ix-input-group style="margin-bottom: 0.5rem;">
-      <span slot="input-start">Email:</span>
-      <input placeholder="example@domain.com" type="email" class="form-control" />
-    </ix-input-group>
-
-    <ix-input-group style="margin-bottom: 0.5rem;">
-      <span slot="input-start">Telephone:</span>
-      <input placeholder="111-111-111" type="tel" class="form-control" />
-    </ix-input-group>
-  </form>
-  <!-- Preview code -->
-  <script type="module" src="./init.js"></script>
-</body>
-
+      <ix-input-group style="margin-bottom: 0.5rem">
+        <span slot="input-start">Telephone:</span>
+        <input placeholder="111-111-111" type="tel" />
+      </ix-input-group>
+    </form>
+    <!-- Preview code -->
+    <script type="module" src="./init.js"></script>
+  </body>
 </html>
