--- a/packages/html-test-app/src/preview-examples/input-with-icon.html
+++ b/packages/html-test-app/src/preview-examples/input-with-icon.html
@@ -6,26 +6,24 @@ SPDX-License-Identifier: MIT
 
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Input with icon example</title>
+  </head>
 
-<head>
-  <title>Input with icon example</title>
-</head>
-
-<body class="theme-brand-dark">
-  <!-- Preview code -->
-  <form class="needs-validation m-2">
-    <ix-input-group>
-      <input type="text" class="form-control" />
-      <span slot="input-end"><ix-icon name="about" size="16"></ix-icon></span>
-    </ix-input-group>
-  </form>
-  <!-- Preview code -->
-  <script>
-    document
-      .querySelector('form')
-      .addEventListener('submit', (evt) => evt.preventDefault());
-  </script>
-  <script type="module" src="./init.js"></script>
-</body>
-
+  <body class="theme-brand-dark">
+    <!-- Preview code -->
+    <form class="needs-validation m-2">
+      <ix-input-group>
+        <input type="text" />
+        <span slot="input-end"><ix-icon name="about" size="16"></ix-icon></span>
+      </ix-input-group>
+    </form>
+    <!-- Preview code -->
+    <script>
+      document
+        .querySelector('form')
+        .addEventListener('submit', (evt) => evt.preventDefault());
+    </script>
+    <script type="module" src="./init.js"></script>
+  </body>
 </html>
