--- a/packages/html-test-app/src/preview-examples/key-value-with-custom-value.html
+++ b/packages/html-test-app/src/preview-examples/key-value-with-custom-value.html
@@ -12,12 +12,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-key-value label="Label">
-      <input
-        class="form-control"
-        placeholder="Enter text here"
-        type="text"
-        slot="custom-value"
-      />
+      <input placeholder="Enter text here" type="text" slot="custom-value" />
     </ix-key-value>
 
     <!-- Preview code -->
