fix: rename margin

--- a/packages/html-test-app/src/preview-examples/grid-padding.html
+++ b/packages/html-test-app/src/preview-examples/grid-padding.html
@@ -9,7 +9,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div class="example-parent">
-      <h4>Grid with padding</h4>
+      <h4>Grid with margin</h4>
       <ix-layout-grid>
         <ix-row>
           <ix-col><ix-typography format="display">1</ix-typography></ix-col>
@@ -27,8 +27,8 @@ SPDX-License-Identifier: MIT
         </ix-row>
       </ix-layout-grid>
 
-      <h4>Grid without padding</h4>
-      <ix-layout-grid no-padding>
+      <h4>Grid without margin</h4>
+      <ix-layout-grid no-margin>
         <ix-row>
           <ix-col><ix-typography format="display">1</ix-typography></ix-col>
           <ix-col><ix-typography format="display">2</ix-typography></ix-col>
