--- a/packages/angular-test-app/src/preview-examples/grid-padding.html
+++ b/packages/angular-test-app/src/preview-examples/grid-padding.html
@@ -7,7 +7,7 @@ This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
 <div class="example-parent">
-  <h4>Grid with padding</h4>
+  <h4>Grid with margin</h4>
   <ix-layout-grid>
     <ix-row>
       <ix-col><ix-typography format="display">1</ix-typography></ix-col>
@@ -25,8 +25,8 @@ LICENSE file in the root directory of this source tree.
     </ix-row>
   </ix-layout-grid>
 
-  <h4>Grid without padding</h4>
-  <ix-layout-grid no-padding>
+  <h4>Grid without margin</h4>
+  <ix-layout-grid no-margin>
     <ix-row>
       <ix-col><ix-typography format="display">1</ix-typography></ix-col>
       <ix-col><ix-typography format="display">2</ix-typography></ix-col>
