feat: add additional modal size fullscreen

--- a/packages/html-test-app/src/preview-examples/modal-sizes.html
+++ b/packages/html-test-app/src/preview-examples/modal-sizes.html
@@ -18,8 +18,9 @@ SPDX-License-Identifier: MIT
       <ix-button data-modal-size="600">Show modal size 600</ix-button>
       <ix-button data-modal-size="720">Show modal size 720</ix-button>
       <ix-button data-modal-size="840">Show modal size 840</ix-button>
-      <ix-button data-modal-size="full-width"
-        >Show full-width modal</ix-button
+      <ix-button data-modal-size="full-width">Show full-width modal</ix-button>
+      <ix-button data-modal-size="full-screen"
+        >Show modal size full-screen</ix-button
       >
     </div>
 
