--- a/packages/angular-test-app/src/preview-examples/modal-sizes.html
+++ b/packages/angular-test-app/src/preview-examples/modal-sizes.html
@@ -12,8 +12,9 @@ LICENSE file in the root directory of this source tree.
   <ix-button (click)="open('600')">Show modal size 600</ix-button>
   <ix-button (click)="open('720')">Show modal size 720</ix-button>
   <ix-button (click)="open('840')">Show modal size 840</ix-button>
-  <ix-button (click)="open('full-width')">
-    Show full-width modal
+  <ix-button (click)="open('full-width')"> Show full-width modal </ix-button>
+  <ix-button (click)="open('full-screen')">
+    Show modal size full-screen
   </ix-button>
 </div>
 
