--- a/packages/core/src/tests/action-card/basic/index.html
+++ b/packages/core/src/tests/action-card/basic/index.html
@@ -21,50 +21,56 @@ SPDX-License-Identifier: MIT
   <body>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="notification"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="alarm"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="critical"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="warning"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="info"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="neutral"
     ></ix-action-card>
     <ix-action-card
       icon="refresh"
-      heading="Scan forn new devices"
+      heading="Scan for new devices"
       subheading="Secondary text"
       variant="success"
+    ></ix-action-card>
+    <ix-action-card
+      icon="refresh"
+      heading="Scan for new devices"
+      subheading="Secondary text"
+      variant="primary"
     ></ix-action-card>
     <ix-action-card>
       <div class="d-flex flex-column align-items-center" style="color: #ff00ff">
