--- a/packages/core/src/tests/card-list/layout-scroll/index.html
+++ b/packages/core/src/tests/card-list/layout-scroll/index.html
@@ -111,6 +111,13 @@ SPDX-License-Identifier: MIT
         subheading="Subheading"
         variant="success"
       ></ix-push-card>
+      <ix-push-card
+        icon="bulb"
+        notification="99"
+        heading="Heading content"
+        subheading="Subheading"
+        variant="primary"
+      ></ix-push-card>
     </ix-card-list>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
