--- a/packages/core/src/tests/textarea/disabled/index.html
+++ b/packages/core/src/tests/textarea/disabled/index.html
@@ -18,11 +18,14 @@ SPDX-License-Identifier: MIT
       }
     </style>
   </head>
+
   <body>
-    <div>
-      <input class="form-control" placeholder="Enter text here" type="text" />
-      <input placeholder="Enter text here" type="text" />
-    </div>
+    <textarea
+      class="form-control"
+      placeholder="Enter text here"
+      disabled
+    ></textarea>
+    <textarea placeholder="Enter text here" disabled></textarea>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
