--- a/packages/core/src/tests/utils/ct/index.html
+++ b/packages/core/src/tests/utils/ct/index.html
@@ -16,6 +16,7 @@ SPDX-License-Identifier: MIT
   <body>
     <div id="mount"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
