--- a/packages/html-test-app/src/preview-examples/button-text-icon.html
+++ b/packages/html-test-app/src/preview-examples/button-text-icon.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" variant="primary" icon="star"> Button </ix-button>
+      <ix-button class="m-1" icon="star"> Button </ix-button>
       <ix-button class="m-1" variant="secondary" icon="star">
         Button
       </ix-button>
