--- a/packages/html-test-app/src/preview-examples/buttons.html
+++ b/packages/html-test-app/src/preview-examples/buttons.html
@@ -1,3 +1,11 @@
+<!--
+SPDX-FileCopyrightText: 2023 Siemens AG
+
+SPDX-License-Identifier: MIT
+
+This source code is licensed under the MIT license found in the
+LICENSE file in the root directory of this source tree.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +16,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" variant="primary"> Button </ix-button>
-      <ix-button class="m-1" disabled variant="primary"> Button </ix-button>
+      <ix-button class="m-1"> Button </ix-button>
+      <ix-button class="m-1" disabled> Button </ix-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
