--- a/packages/html-test-app/src/preview-examples/button-loading.html
+++ b/packages/html-test-app/src/preview-examples/button-loading.html
@@ -22,7 +22,7 @@ SPDX-License-Identifier: MIT
       }
     </script>
 
-    <ix-button onclick="toggle(this)" class="m-1" outline variant="primary">
+    <ix-button onclick="toggle(this)" class="m-1" outline>
       Button
     </ix-button>
 
@@ -31,7 +31,6 @@ SPDX-License-Identifier: MIT
       icon="star"
       class="m-1"
       outline
-      variant="primary"
     >
       Button
     </ix-button>
@@ -45,7 +44,7 @@ SPDX-License-Identifier: MIT
     >
     </ix-icon-button>
 
-    <ix-button loading class="m-1" outline variant="primary">
+    <ix-button loading class="m-1" outline>
       Button
     </ix-button>
 
