fix(content-header): unnecessary 'true'

--- a/packages/angular-test-app/src/preview-examples/content-header-no-back.html
+++ b/packages/angular-test-app/src/preview-examples/content-header-no-back.html
@@ -3,13 +3,13 @@
   headerTitle="content title"
   headerSubtitle="subtitle content"
 >
-  <ix-icon-button icon="pen" ghost="true" variant="primary">
+  <ix-icon-button icon="pen" ghost variant="primary">
     Button1
   </ix-icon-button>
-  <ix-icon-button icon="trashcan" ghost="true" variant="primary">
+  <ix-icon-button icon="trashcan" ghost variant="primary">
     Button2
   </ix-icon-button>
-  <ix-icon-button icon="context-menu" ghost="true" variant="primary">
+  <ix-icon-button icon="context-menu" ghost variant="primary">
     Button3
   </ix-icon-button>
 </ix-content-header>
