--- a/packages/angular-test-app/src/preview-examples/content-header.html
+++ b/packages/angular-test-app/src/preview-examples/content-header.html
@@ -3,7 +3,7 @@
   headerTitle="content title"
   headerSubtitle="subtitle content"
 >
-  <ix-button ghost="true">Button1</ix-button>
-  <ix-button ghost="true">Button2</ix-button>
-  <ix-button ghost="true">Button3</ix-button>
+  <ix-button ghost>Button1</ix-button>
+  <ix-button ghost>Button2</ix-button>
+  <ix-button ghost>Button3</ix-button>
 </ix-content-header>
