--- a/packages/html-test-app/src/preview-examples/content-header-no-back.html
+++ b/packages/html-test-app/src/preview-examples/content-header-no-back.html
@@ -16,13 +16,13 @@ SPDX-License-Identifier: MIT
       header-title="Content title"
       header-subtitle="Subtitle"
     >
-      <ix-icon-button icon="pen" ghost="true" variant="primary">
+      <ix-icon-button icon="pen" ghost variant="primary">
         Button1
       </ix-icon-button>
-      <ix-icon-button icon="trashcan" ghost="true" variant="primary">
+      <ix-icon-button icon="trashcan" ghost variant="primary">
         Button2
       </ix-icon-button>
-      <ix-icon-button icon="context-menu" ghost="true" variant="primary">
+      <ix-icon-button icon="context-menu" ghost variant="primary">
         Button3
       </ix-icon-button>
     </ix-content-header>
