--- a/packages/html-test-app/src/preview-examples/content-header.html
+++ b/packages/html-test-app/src/preview-examples/content-header.html
@@ -16,9 +16,9 @@ SPDX-License-Identifier: MIT
       header-title="Content title"
       header-subtitle="Subtitle"
     >
-      <ix-button ghost="true">Button1</ix-button>
-      <ix-button ghost="true">Button2</ix-button>
-      <ix-button ghost="true">Button3</ix-button>
+      <ix-button ghost>Button1</ix-button>
+      <ix-button ghost>Button2</ix-button>
+      <ix-button ghost>Button3</ix-button>
     </ix-content-header>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
