fix(content-header): inconsistent examples

--- a/packages/angular-test-app/src/preview-examples/content-header-no-back.html
+++ b/packages/angular-test-app/src/preview-examples/content-header-no-back.html
@@ -1,7 +1,7 @@
 <ix-content-header
   variant="secondary"
-  headerTitle="content title"
-  headerSubtitle="subtitle content"
+  headerTitle="Content title"
+  headerSubtitle="Subtitle"
 >
   <ix-icon-button icon="pen" ghost variant="primary">
     Button1
