--- a/packages/angular-test-app/src/preview-examples/content-header.html
+++ b/packages/angular-test-app/src/preview-examples/content-header.html
@@ -1,7 +1,7 @@
 <ix-content-header
   hasBackButton="true"
-  headerTitle="content title"
-  headerSubtitle="subtitle content"
+  headerTitle="Content title"
+  headerSubtitle="Subtitle"
 >
   <ix-button ghost>Button1</ix-button>
   <ix-button ghost>Button2</ix-button>
