--- a/packages/html-test-app/src/preview-examples/dropdown-button-icon.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-button-icon.html
@@ -27,19 +27,19 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div class="example">
-      <ix-dropdown-button label="" variant="primary" icon="checkboxes">
+      <ix-dropdown-button label="" icon="checkboxes">
         <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
         <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
-      <ix-dropdown-button label="" variant="primary" outline icon="checkboxes">
+      <ix-dropdown-button label="" outline icon="checkboxes">
         <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
         <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
-      <ix-dropdown-button label="" variant="primary" ghost icon="checkboxes">
+      <ix-dropdown-button label="" ghost icon="checkboxes">
         <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
         <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
-      <ix-dropdown-button label="" variant="primary" disabled icon="checkboxes">
+      <ix-dropdown-button label="" disabled icon="checkboxes">
       </ix-dropdown-button>
     </div>
     <!-- Preview code -->
