--- a/packages/html-test-app/src/preview-examples/input-search.html
+++ b/packages/html-test-app/src/preview-examples/input-search.html
@@ -10,6 +10,7 @@ SPDX-License-Identifier: MIT
     <title>Input Search example</title>
   </head>
   <body class="theme-brand-dark">
+    <!-- Preview code -->
     <form class="needs-validation m-2">
       <ix-input-group>
         <span slot="input-start">
@@ -27,6 +28,7 @@ SPDX-License-Identifier: MIT
         </span>
       </ix-input-group>
     </form>
+    <!-- Preview code -->
     <script>
       toggleClear();
       function clearInput() {
