fix(pill): typo attribute

--- a/packages/html-test-app/src/preview-examples/pill.html
+++ b/packages/html-test-app/src/preview-examples/pill.html
@@ -27,7 +27,7 @@ SPDX-License-Identifier: MIT
 
     <ix-pill icon="star">Label</ix-pill>
     <ix-pill icon="star" style="width: 8rem"> Label </ix-pill>
-    <ix-pill outline alignLeft icon="star" style="width: 8rem"> Label </ix-pill>
+    <ix-pill outline align-left icon="star" style="width: 8rem"> Label </ix-pill>
 
     <ix-pill variant="alarm">Label</ix-pill>
     <ix-pill variant="alarm" outline> Label </ix-pill>
@@ -35,7 +35,7 @@ SPDX-License-Identifier: MIT
 
     <ix-pill variant="alarm" icon="star"> Label </ix-pill>
     <ix-pill variant="alarm" icon="star" style="width: 8rem"> Label </ix-pill>
-    <ix-pill variant="alarm" outline alignLeft icon="star" style="width: 8rem">
+    <ix-pill variant="alarm" outline align-left icon="star" style="width: 8rem">
       Label
     </ix-pill>
     <!-- Preview code -->
