fix(toggle-button-primary): variant inconsistent

--- a/packages/html-test-app/src/preview-examples/toggle-button-primary-outline.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-primary-outline.html
@@ -21,14 +21,14 @@ LICENSE file in the root directory of this source tree.
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button variant="Primary" outline>Normal</ix-toggle-button>
-      <ix-toggle-button variant="Primary" outline pressed>
+      <ix-toggle-button variant="primary" outline>Normal</ix-toggle-button>
+      <ix-toggle-button variant="primary" outline pressed>
         Pressed
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" outline disabled>
+      <ix-toggle-button variant="primary" outline disabled>
         Disabled
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" outline disabled loading>
+      <ix-toggle-button variant="primary" outline disabled loading>
         Loading
       </ix-toggle-button>
     </div>
