--- a/packages/html-test-app/src/preview-examples/toggle-button-primary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-primary-ghost.html
@@ -21,14 +21,14 @@ LICENSE file in the root directory of this source tree.
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button variant="Primary" ghost> Normal </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost pressed>
+      <ix-toggle-button variant="primary" ghost> Normal </ix-toggle-button>
+      <ix-toggle-button variant="primary" ghost pressed>
         Pressed
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost disabled>
+      <ix-toggle-button variant="primary" ghost disabled>
         Disabled
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost disabled loading>
+      <ix-toggle-button variant="primary" ghost disabled loading>
         Loading
       </ix-toggle-button>
     </div>
