fix(icon-toggle-button-primary): variant incon

--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-primary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-primary-ghost.html
@@ -22,24 +22,24 @@ LICENSE file in the root directory of this source tree.
     <!-- Preview code -->
     <div>
       <ix-icon-toggle-button
-        variant="Primary"
+        variant="primary"
         ghost
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        variant="Primary"
+        variant="primary"
         ghost
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        variant="Primary"
+        variant="primary"
         ghost
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        variant="Primary"
+        variant="primary"
         ghost
         icon="checkboxes"
         disabled
