fix(aggrid): fix examples and adjust docs

--- a/packages/documentation/static/code-runtime/html/src/index.html
+++ b/packages/documentation/static/code-runtime/html/src/index.html
@@ -6,12 +6,22 @@ SPDX-License-Identifier: MIT
 This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-grid.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"
+    />
   </head>
   <body>
     <!-- IX_INJECT_SOURCE_CODE -->
