--- a/packages/html-test-app/src/preview-examples/aggrid.html
+++ b/packages/html-test-app/src/preview-examples/aggrid.html
@@ -8,7 +8,7 @@ SPDX-License-Identifier: MIT
 <html>
   <head>
     <title>Blind example</title>
-    <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-grid.css"
