fix(layout-grid): fix and uniform examples

--- a/packages/angular-test-app/src/preview-examples/grid.html
+++ b/packages/angular-test-app/src/preview-examples/grid.html
@@ -7,7 +7,7 @@ This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
 
-<ix-layout-grid>
+<ix-layout-grid class='example-grid'>
   <ix-row>
     <ix-col><ix-typography format="display">1</ix-typography></ix-col>
     <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -18,7 +18,7 @@ LICENSE file in the root directory of this source tree.
   </ix-row>
 </ix-layout-grid>
 
-<ix-layout-grid>
+<ix-layout-grid class='example-grid'>
   <ix-row>
     <ix-col><ix-typography format="display">1</ix-typography></ix-col>
     <ix-col><ix-typography format="display">2</ix-typography></ix-col>
