--- a/packages/angular-test-app/src/preview-examples/grid-padding.html
+++ b/packages/angular-test-app/src/preview-examples/grid-padding.html
@@ -9,7 +9,7 @@ LICENSE file in the root directory of this source tree.
 
 <div class="example-parent">
   <h4>Grid with margin</h4>
-  <ix-layout-grid>
+  <ix-layout-grid class='example-grid'>
     <ix-row>
       <ix-col><ix-typography format="display">1</ix-typography></ix-col>
       <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -27,7 +27,7 @@ LICENSE file in the root directory of this source tree.
   </ix-layout-grid>
 
   <h4>Grid without margin</h4>
-  <ix-layout-grid no-margin>
+  <ix-layout-grid no-margin class='example-grid'>
     <ix-row>
       <ix-col><ix-typography format="display">1</ix-typography></ix-col>
       <ix-col><ix-typography format="display">2</ix-typography></ix-col>
