--- a/packages/angular-test-app/src/preview-examples/grid-size.html
+++ b/packages/angular-test-app/src/preview-examples/grid-size.html
@@ -8,7 +8,7 @@ LICENSE file in the root directory of this source tree.
 -->
 
 <h4>Column 6 takes up more space to a max of 12 columns total</h4>
-<ix-layout-grid>
+<ix-layout-grid class='example-grid'>
   <ix-row>
     <ix-col><ix-typography format="display">1</ix-typography></ix-col>
     <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -20,7 +20,7 @@ LICENSE file in the root directory of this source tree.
 </ix-layout-grid>
 
 <h4>Stack columns on smaller screens</h4>
-<ix-layout-grid>
+<ix-layout-grid class='example-grid'>
   <ix-row>
     <ix-col size="12" size-md="3"
       ><ix-typography format="display">1</ix-typography></ix-col
