--- a/packages/html-test-app/src/preview-examples/grid-size.html
+++ b/packages/html-test-app/src/preview-examples/grid-size.html
@@ -11,8 +11,13 @@ LICENSE file in the root directory of this source tree.
 <html>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <h4>Column 6 takes all space until reached column 12</h4>
-    <ix-layout-grid>
+    <link
+      rel="stylesheet"
+      href="./styles/grid.css"
+    />
+
+    <h4>Column 6 takes up more space to a max of 12 columns total</h4>
+    <ix-layout-grid class="example-grid">
       <ix-row>
         <ix-col><ix-typography format="display">1</ix-typography></ix-col>
         <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -25,8 +30,8 @@ LICENSE file in the root directory of this source tree.
       </ix-row>
     </ix-layout-grid>
 
-    <h4>Stack on smaller screens as md</h4>
-    <ix-layout-grid>
+    <h4>Stack columns on smaller screens</h4>
+    <ix-layout-grid class="example-grid">
       <ix-row>
         <ix-col size="12" size-md="3"
           ><ix-typography format="display">1</ix-typography></ix-col
@@ -43,24 +48,6 @@ LICENSE file in the root directory of this source tree.
       </ix-row>
     </ix-layout-grid>
     <!-- Preview code -->
-    <style>
-      ix-layout-grid {
-        margin-bottom: 1rem;
-      }
-
-      ix-col > ix-typography {
-        display: flex;
-        padding: 0.15rem;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        flex: 1 0 0;
-        align-self: stretch;
-        border: 1px solid var(--theme-color-soft-bdr);
-        background: var(--theme-color-ghost);
-        border-radius: 3px;
-      }
-    </style>
     <script type="module" src="./init.js"></script>
   </body>
 </html>
