--- a/packages/html-test-app/src/preview-examples/grid.html
+++ b/packages/html-test-app/src/preview-examples/grid.html
@@ -11,7 +11,12 @@ LICENSE file in the root directory of this source tree.
 <html>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-layout-grid>
+    <link
+      rel="stylesheet"
+      href="./styles/grid.css"
+    />
+
+    <ix-layout-grid class="example-grid">
       <ix-row>
         <ix-col><ix-typography format="display">1</ix-typography></ix-col>
         <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -22,7 +27,7 @@ LICENSE file in the root directory of this source tree.
       </ix-row>
     </ix-layout-grid>
 
-    <ix-layout-grid>
+    <ix-layout-grid class="example-grid">
       <ix-row>
         <ix-col><ix-typography format="display">1</ix-typography></ix-col>
         <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -39,24 +44,6 @@ LICENSE file in the root directory of this source tree.
       </ix-row>
     </ix-layout-grid>
     <!-- Preview code -->
-    <style>
-      ix-layout-grid {
-        margin-bottom: 1rem;
-      }
-
-      ix-col > ix-typography {
-        display: flex;
-        padding: 0.15rem;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        flex: 1 0 0;
-        align-self: stretch;
-        border: 1px solid var(--theme-color-soft-bdr);
-        background: var(--theme-color-ghost);
-        border-radius: 3px;
-      }
-    </style>
     <script type="module" src="./init.js"></script>
   </body>
 </html>
