fix: import aggrid and echarts locally

--- a/packages/html-test-app/src/preview-examples/aggrid.html
+++ b/packages/html-test-app/src/preview-examples/aggrid.html
@@ -11,6 +11,9 @@ LICENSE file in the root directory of this source tree.
 <html>
   <head>
     <title>Blind example</title>
+  </head>
+  <body class="theme-brand-dark">
+    <!-- Preview code -->
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <link
       rel="stylesheet"
@@ -20,9 +23,11 @@ LICENSE file in the root directory of this source tree.
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"
     />
-  </head>
-  <body class="theme-brand-dark">
-    <!-- Preview code -->
+    <link
+      rel="stylesheet"
+      href="@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css"
+    />
+
     <div
       style="height: 12rem; width: 100%"
       id="grid-container"
