fix: update examples test env

--- a/packages/html-test-app/src/index.html
+++ b/packages/html-test-app/src/index.html
@@ -14,10 +14,8 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="theme-classic-new-dark">
-    <!-- Preview code -->
-    <ix-button>Button</ix-button>
-    <!-- Preview code -->
-    <script type="module" src="./preview-examples/init.js"></script>
+  <body class="theme-brand-dark">
+    <!-- example code -->
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
